added some more functions

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 	<body>
 		<div>
 			<input type="text" id="team1-bonus" value="3" min="0">
-			<h3>Team 1</h3>
+			<h3 data-team="1"></h3>
 		</div>
 		<div>
 			<input type="text" id="team2-bonus" value="3" min="0">
-			<h3>Team 2</h3>
+			<h3 data-team="2"></h3>
 		</div>
 		<div>
 			<input type="text" id="team3-bonus" value="3" min="0">
-			<h3>Team 3</h3>
+			<h3 data-team="3"></h3>
 		</div>
 		<div>
 			<input type="text" id="team4-bonus" value="3" min="0">
-			<h3>Team 4</h3>
+			<h3 data-team="4"></h3>
 		</div>
 
 		<div id="cardWrapper"></div>
